# Verlet-Rope

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.c
